<resources>
    <string name="app_name">NewChat</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don’t have an account? Sign up here</string>
    <string name="already_have_an_account">Already have an account? Log in here</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="Add_image">Add Image</string>
    <string name="contacts">Contacts</string>
    <string name="log_out">Log Out</string>
    <string name="placeholder">placeholder</string>
    <string name="chat">Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
</resources>
